# mofid

./: .gitignore  README.md  manage.py
backend/: settings.py  urls.py
configs/: pyproject.toml
scripts/: bump.py
