[tool.poetry]
name = "backend"
version = "0.0.3"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2,<5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
gitpython = "^3.1.43"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
