[tool.poetry]
name = "backend"
version = "0.0.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2,<5.0"
django-cors-headers = "^4.4.0"
djangorestframework = "^3.15.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
gitpython = "^3.1.43"
black = "^24.8.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
